# sentiment-analysis-rnn-lstm-bert

./: .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt
.github/workflows/: ci.yml
notebooks/: train_and_publish_colab.ipynb
reports/: metrics.json  model_card.md
src/sentiment/: __init__.py  compare.py  data.py  evaluate.py  model_card.py  models.py  train_bert.py  train_rnn.py  vocab.py
tests/: test_sentiment.py
